--- a/templates/exit.html
+++ b/templates/exit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exit</title>
 </head>
 <body>
     <h1>Gracias por su visita</h1>
