Interfaz tempates y Google Fonts

--- a/templates/block.html
+++ b/templates/block.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Block</title>
+    <link rel="stylesheet" href="../styles/styleb.css">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Cuenta bloqueda</h1>
+    <div class="cont">
+        <h1>Cuenta bloqueda</h1>
+    </div>
+    
 </body>
 </html>
