--- a/templates/exit.html
+++ b/templates/exit.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exit</title>
+    <link rel="stylesheet" href="../styles/stylee.css">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+    
 </head>
 <body>
-    <h1>Gracias por su visita</h1>
+    <div class="main">
+        <h1>Gracias por su tiempo</h1>
+    </div>
+    
 </body>
 </html>
