--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,12 @@
     padding: 0;
 }
 
+@font-face {
+    font-family:DancingScript;
+    src: url(/assets/fonts/Dancing_Script/DancingScript-VariableFont_wght.ttf)
+    
+}
+
 body{
     /**Degradado*/
     background-color: aquamarine;
@@ -24,6 +30,7 @@ body{
 }
 
 .cajero-main li{
+    font-family: Arial, Helvetica, sans-serif;
     list-style: none;
     padding: 2vh;
     border: solid 1px;
@@ -38,8 +45,8 @@ body{
 }
 
 .cajero-main h1{
-     /**font-family: ; Goggle Fonts */
-     font-size: 5vh;
+    font-family: DancingScript, Arial, Helvetica, sans-serif;
+    font-size: 5vh;
      
 }
 
