vFinal sin internet

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ body{
 }
 
 .cajero-main h1{
-    font-family: DancingScript, Arial, Helvetica, sans-serif;
+    font-family: DancingScript;
     font-size: 5vh;
      
 }
