--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 
 body{
     /**Degradado*/
-    background-color: aquamarine;
+    background-image: linear-gradient( 58.2deg,  rgba(40,91,212,0.73) -3%, rgba(171,53,163,0.45) 49.3%, rgba(255,204,112,0.37) 97.7% );
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     align-items: center;
@@ -19,6 +19,7 @@ body{
 }
 
 .cajero-main{
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     padding: 5vh;
     margin: 0 auto;
     margin-top: 5vh;
@@ -39,6 +40,8 @@ body{
     background-color: grey;
     
 }
+
+
 .cajero-main a{
     text-decoration: none;
     color: #fff;
