--- a/styles/styleb.css
+++ b/styles/styleb.css
@@ -11,7 +11,7 @@
 
 body{
     
-    background-color: red;
+    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(183,18,52,1) 0%, rgba(139,14,40,1) 99.5% );
     font-family: DancingScript;
     text-align: center;
     align-items: center;
@@ -19,6 +19,7 @@ body{
 }
 
 .cont{
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     padding: 5vh;
     margin: 0 auto;
     margin-top: 5vh;
