--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,23 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
 @font-face {
-    font-family:DancingScript;
+    font-family: DancingScript;
     src: url(/assets/fonts/Dancing_Script/DancingScript-VariableFont_wght.ttf)
-    
 }
 
-body{
+body {
     /**Degradado*/
-    background-image: linear-gradient( 58.2deg,  rgba(40,91,212,0.73) -3%, rgba(171,53,163,0.45) 49.3%, rgba(255,204,112,0.37) 97.7% );
+    background-image: linear-gradient(58.2deg, rgba(40, 91, 212, 0.73) -3%, rgba(171, 53, 163, 0.45) 49.3%, rgba(255, 204, 112, 0.37) 97.7%);
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     align-items: center;
     justify-content: center;
 }
 
-.cajero-main{
+.cajero-main {
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     padding: 5vh;
     margin: 0 auto;
@@ -30,7 +29,7 @@ body{
     /**shadow-box:*/
 }
 
-.cajero-main li{
+.cajero-main li {
     font-family: Arial, Helvetica, sans-serif;
     list-style: none;
     padding: 2vh;
@@ -38,26 +37,26 @@ body{
     border-radius: 5px;
     margin-top: 1vh;
     background-color: grey;
-    
+
 }
 
 
-.cajero-main a{
+.cajero-main a {
     text-decoration: none;
     color: #fff;
 }
 
 .cajero-main a:hover {
     color: red;
-  }
-
-
-.cajero-main h1{
-    font-family: DancingScript;
-    font-size: 5vh;
-     
 }
 
-.cajero-main p{
+
+.cajero-main h1 {
+    font-family: DancingScript;
+    font-size: 5vh;
+
+}
+
+.cajero-main p {
     margin-top: 5vh;
 }
